--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
 		"express": "^4.21.0",
 		"ofetch": "^1.3.4",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.4",
