--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.7",
+		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.13",
 		"express": "^4.21.0",
 		"ofetch": "^1.3.4",
 		"react": "^18.3.1",
